WIP #85 powershell support